# langfarm-python-sdk

./: README.md  docker-compose-langfuse.yml  logging.yaml  pyproject.toml  tongyi.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1-bug_report.yml  2-feature_request.yml  3-doc.yml  4-question.yml  config.yml
.github/workflows/: tagged-release.yml
docker/: docker-compose-deps.yml
examples/: demo_dashscope_observe.py  demo_tongyi_langfuse_callback.py
langfarm/hooks/: misc.py
langfarm/hooks/dashscope/: generation.py
langfarm/hooks/langchain_community/llms/: tongyi.py
langfarm/hooks/langfuse/callback/: langchain.py
scripts/: init-postgres-docker-data.sh  pull-langfuse-server.sh  start-docker-compose-deps.sh  start-langfuse-docker.sh  test.sh
src/langfarm/hooks/: misc.py
src/langfarm/hooks/dashscope/: __init__.py  generation.py
src/langfarm/hooks/langchain_community/llms/: tongyi.py
src/langfarm/hooks/langfuse/callback/: langchain.py
tests/: base.py  mock.py  test_config_logging.py  test_hook_dashscope_integration_langfuse.py  test_hook_dashscope_retry.py  test_hook_langfuse_callback.py
tests/init_db/: init_data.sql
